row-gap fix

--- a/css/style.css
+++ b/css/style.css
@@ -363,6 +363,10 @@ footer {
     margin-block-end: 0.25rem;
   }
 
+  .job-cards {
+    row-gap: 1.5rem;
+  }
+
   .job-cards.filter-off {
     margin-block-start: 4.75rem;
   }
